# flipper

./: .atom-build.yml  .gitignore  .stylish-haskell.yaml  LICENSE  README.md  flipper.cabal  shake.it.hs  stack.yaml
src/: Boxed.hs  Focused.hs  Main.hs  Median.hs
